# wxMultiEditor

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: App.hpp  Logic.hpp  MainFrame.hpp
src/: App.cpp  Logic.cpp  MainFrame.cpp
tests/: unit_test.cpp
